# kelpie-flight-planner

./: .gitignore  .project  Cargo.toml  README.md  build.rs  do_gettext.sh
.github/workflows/: rust-windows.yml  rust.yml
doc-src/: Makefile  airport_map_view.rst  conf.py
doc-src/_static/: custom.css
docs/: .buildinfo  airport_map_view.html  airport_view.html  genindex.html  index.html  install.html  navaid_view.html  objects.inv  plan_editor.html  search.html  searchindex.js  world_map_view.html
docs/.doctrees/: environment.pickle  index.doctree  install.doctree  navaid_view.doctree  world_map_view.doctree
docs/_sources/: airport_view.rst.txt  index.rst.txt  install.rst.txt
docs/doctrees/: airport_map_view.doctree  airport_view.doctree  environment.pickle  index.doctree  install.doctree  navaid_view.doctree  plan_editor.doctree  world_map_view.doctree
docs/html/: .buildinfo  airport_map_view.html  airport_view.html  genindex.html  index.html  install.html  navaid_view.html  plan_editor.html  search.html  world_map_view.html
docs/preferences/: aircraft_preference.html  fg_link_preference.html  general_preference.html  planner_preference.html
resources/: airport_map_view.ui  airport_popover.ui  airport_view.ui  fix_popover.ui  fix_view.ui  navaid_popover.ui  navaid_view.ui  plan_popover.ui  plan_view.ui  preference.ui  preference_aircraft.ui  preference_aircraft_dialog.ui  preference_fglink.ui  preference_general.ui  preference_planner.ui  resources.gresource.xml  style.css  window.ui  world_map_popover.ui  world_map_view.ui
resources/test/: YSSY-YBBN.fpl
resources/translations/: de.po  en.po  es.po  fr.po  pt.po  zh.po
src/: main.rs
src/earth/: airport_list_model.rs  coordinate.rs  fix_list_model.rs  geomagnetism.rs  mod.rs  navaid_list_model.rs  shapefile.rs  solar.rs  spherical_projector.rs
src/event/: mod.rs
src/events/: mod.rs
src/hangar/: hangar.rs  mod.rs
src/model/: aircraft.rs  airport.rs  airport_object.rs  fix.rs  fix_object.rs  location.rs  mod.rs  navaid.rs  navaid_object.rs  plan.rs  plan_object.rs  runway.rs  runway_object.rs  sector.rs  sector_object.rs  test_utils.rs  waypoint.rs  waypoint_object.rs
src/planner/: mod.rs  planner.rs
src/preference/: mod.rs
src/util/: airport_painter.rs  airport_parser.rs  distance_format.rs  fg_link.rs  fix_parser.rs  hour_format.rs  info.rs  lat_long_format.rs  location_filter.rs  mod.rs  navaid_parser.rs  plan_reader.rs  plan_writer_route_manager.rs  plan_writer_xml.rs  speed_format.rs
src/window/: aircraft_renderer.rs  airport_map_view.rs  airport_renderer.rs  airport_view.rs  fix_view.rs  imp.rs  map_utils.rs  mod.rs  navaid_renderer.rs  navaid_view.rs  plan_renderer.rs  plan_tree_model.rs  plan_view.rs  preferences.rs  program.frag  program.vert  program_map.frag  program_map.vert  program_starfield.frag  program_starfield.vert  (+9 more)
(+61 files in other folders)
