[package]
name = "kelpie_rust_planner"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html 

[dependencies]
chrono = "0.4.38"
dirs-next = "2.0.0"
gtk = { version = "0.10.1", package = "gtk4", features = ["v4_18"] }
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_7"] }
log = "0.4"
rolling-file = "0.2.0"
gettext-rs = { version = "0.7", features = ["gettext-system"]}
preferences = "2.0.0"
regex-lite = "0.1.5"
shapefile = { version = "0.6.0", features = ["geo-types"] }
simplelog = "0.12.2"
yaml-rust = "0.4.5"
libloading = "0.8.5"
epoxy = "0.1.0"
gl = "0.14.0"
nalgebra-glm = "0.19.0"
flate2 = "1.0.35"
xmltree = "0.11.0"
rust-embed = "8.5.0"
ureq = { version = "2.9.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
scheduling = "0.1.2"
home = "0.5.9"
async-channel = "2.3.1"
async-std = "1.13.0"
geo = { version = "0.29.3"}
earcutr = "0.4.3"

[profile.release]
opt-level = 3

[build-dependencies]
glib-build-tools = "0.20.0"
